--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 		<main class="Accio" id="Job">
 			<p class="hello-accio-job"> Hello Accio Job </p>
+		</main>
 		
     <script type="text/javascript" src="./script.js">
 </script>
